--- a/Assets/config.json
+++ b/Assets/config.json
@@ -1,8 +1,9 @@
 {
 	"spout_source_name": "Any",
+	"captureCardDeviceName": "Game Capture HD60 X",
 	
-	"idle_texture": "C:/Users/Ylva/Documents/Projects/Unity VTuber Software/Assets/Textures/normal.png",
-	"blinking_texture": "C:/Users/Ylva/Documents/Projects/Unity VTuber Software/Assets/Textures/blinking.png",
-	"talking_texture": "C:/Users/Ylva/Documents/Projects/Unity VTuber Software/Assets/Textures/talking.png",
-	"talking_blinking_texture": "C:/Users/Ylva/Documents/Projects/Unity VTuber Software/Assets/Textures/talking_blinking.png"
+	"idle_texture": "C:/Users/Ylva/Documents/Projects/Unity VTuber Software/Assets/Textures/Avatar/idle.png",
+	"blinking_texture": "",
+	"talking_texture": "C:/Users/Ylva/Documents/Projects/Unity VTuber Software/Assets/Textures/Avatar/talking.png",
+	"talking_blinking_texture": ""
 }
