--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ crashlytics-build.properties
 /SpoutWinCapture.exe
 /SpoutWinCapture
 /Assets/Config/TwitchConnectData.asset
+/Assets/Config/config.json
